--- a/public/navigation_css/infomation_account.css
+++ b/public/navigation_css/infomation_account.css
@@ -20,13 +20,17 @@
     justify-content: center;
     padding-bottom: 50px;
 }
-.table{
+#table1,
+#table2,
+#table3,
+#table4{
     width: 100%;
     height: auto;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
     margin-top: 30px;
     font-size: 14px;
+    overflow: hidden;
 }
 .page__header{
     min-height: 90px;
@@ -154,7 +158,7 @@ span.the__second__part.the__second__part__content{
 .the__second__part.the__second__part__button{
     /* height: 33px; */
     width: 100px;
-    padding: 12px 0;
+    padding: 8px 0;
     margin-top: 10px;
     background-color: white;
     border-radius: 3px;
