--- a/public/navigation_css/information_card_TS.css
+++ b/public/navigation_css/information_card_TS.css
@@ -2,6 +2,9 @@
     font-family: montserrat;
     /* overflow: hidden; */
 }
+h1{
+    font-style: normal !important;
+}
 .footer{
     overflow: hidden;
 }
@@ -11,6 +14,7 @@
     margin-top: 68px;
     display: flex;
     justify-content: center;
+    background-color: #f9f9f9;
 }
 .container__inner{
     height: auto;
@@ -30,9 +34,11 @@
     width: 95%;
     height: auto;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
     margin-top: 30px;
     font-size: 14px;
+    overflow: hidden;
+    background-color: #fff;
 }
 /* .table{
     width: 95%;
@@ -78,7 +84,7 @@ button.night__mode__button{
     color: whitesmoke;
     cursor: pointer;
 }
-i.bx.bxs-moon{
+.night__mode__button i{
     font-size: 14px;
 }
 button.night__mode__button:hover{
@@ -92,7 +98,9 @@ button.night__mode__button:active{
 
 
 
-
+.card__information:first-child{
+    border: unset;
+}
 
 .border__top{
     border-top: 1px rgba(0, 0, 0, 0.05) solid;
@@ -122,7 +130,7 @@ button.night__mode__button:active{
     padding: 0;
     padding-right: 10px;
     border-radius: 0;
-    border-right: 1px rgba(0, 0, 0, 0.05) solid;
+    /* border-right: 1px rgba(0, 0, 0, 0.05) solid; */
 }
 .first__part.first__part__image{
     width: 100%;
@@ -141,12 +149,17 @@ img.card{
 
 
 .information__card.the__second__part{
-    /* background-color: goldenrod; */
     width: 40%;
     padding: 0;
     padding: 15px 0;
-    /* border-radius: 10px; */
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); */
+    border-radius: 10px;
+    border: 1px solid #99999922;
+    padding: 16px;
+    transition: all .3s;
+}
+.information__card.the__second__part:hover{
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.05);
+    border-color: transparent;
 }
 .the__second__part.the__second__part__group{
     width: 100%;
@@ -174,6 +187,11 @@ img.card{
     width: 40%;
     margin-left: 15px;
     color: rgba(0, 0, 0, 0.5);
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 a.card__type__content.card__type__content__link{
     color: rgba(0, 0, 0, 0.6);
@@ -228,13 +246,17 @@ a.rules__group__title.rules__group__title__content:active{
     line-height: 1.4;
     z-index: 1;
 }
+
 ul.group__rules{
+    box-shadow: 0 0 0 1000px rgba(0, 0, 0, 0.5);
+    position: relative;
     width: 90%;
     display: flex;
     flex-direction: column;
+    gap: 10px;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 0 0 0 1000px rgba(0, 0, 0, 0.5);
+    padding: 16px;
 }
 li.group__rules__title{
     width: 100%;
@@ -247,13 +269,11 @@ li.group__rules__title{
     font-size: 16px;
 }
 li.group__rules.title__and__content{
-    /* margin-top: 15px; */
-    padding: 15px;
-    color: rgba(0, 0, 0, 0.5);
-    text-align: justify;
+    color: #555;
+    text-align: start;
+    font-size: 16px;
 }
 span.group__rules.title__content{
-    margin-left: 10px;
     margin-right: 2px;
     color: black;
 }
@@ -266,10 +286,11 @@ li.group__rules.button__hide{
 }
 button.button__hide.button__hide__terms__of__use{
     background-color: white;
-    border-radius: 5px;
-    border: 1px rgba(0, 0, 0, 0.2) solid;
-    padding: 4px 8px;
+    border-radius: 8px;
+    border: 1px rgba(0, 0, 0, 0.1) solid;
+    padding: 8px 12px;
     color: rgba(0, 0, 0, 0.5);
+    cursor: pointer;
 }
 button.button__hide.button__hide__terms__of__use:hover{
     color: black;
@@ -290,7 +311,6 @@ button.button__hide.button__hide__terms__of__use:active{
         padding: 0;
         margin-bottom: 10px;
         border: none;
-        border-bottom: 1px rgba(0, 0, 0, 0.05) solid;
     }
     .first__part.first__part__image{
         margin-bottom: 20px;
@@ -302,7 +322,7 @@ button.button__hide.button__hide__terms__of__use:active{
     }
     .information__card.the__second__part{
         width: 100%;
-        padding: 0;
+        /* padding: 0; */
     }
     #information__card__title{
         margin: 0;
@@ -332,7 +352,6 @@ button.button__hide.button__hide__terms__of__use:active{
 .table__training__schedule{
     width: 95%;
     height: auto;
-    /* background-color: goldenrod; */
     margin-top: 30px;
     font-size: 14px;
 }
@@ -344,8 +363,8 @@ button.button__hide.button__hide__terms__of__use:active{
     padding: 0 16px;
     border-radius: 10px;
     margin-bottom: 20px;
-    border-bottom: 1px rgba(0, 0, 0, 0.05) solid;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+    background-color: #fff;
 }
 .operation__button{
     display: flex;
@@ -357,16 +376,17 @@ button.button__hide.button__hide__terms__of__use:active{
     align-items: center;
     min-height: 60px;
 }
-button.button__in__operation{
+.button__in__operation{
     background-color: white;
     border-radius: 5px;
-    /* border: 1px rgba(0, 0, 0, 0.1) solid; */
     border: none;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
     padding: 4px 8px;
-    color: rgba(0, 0, 0, 0.5);
+    color: #999;
     display: flex;
-    /* align-items: center; */
+    /* box-shadow: 0 0 5px rgba(0, 0, 0, 0.15); */
+    border: 1px solid #99999922;
+    cursor: pointer;
+    transition: all .2s;
 }
 button#button2{
     margin-left: 16px;
@@ -377,9 +397,7 @@ i.bx.bx-list-check{
 }
 
 button.button__in__operation:hover{
-    color: rgba(0, 0, 0, 0.6);
-    /* border: 1px rgba(0, 0, 0, 0.15) solid; */
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 button.button__in__operation:active{
     background-color: whitesmoke;
