--- a/public/navigation_css/personal_trainer.css
+++ b/public/navigation_css/personal_trainer.css
@@ -182,6 +182,16 @@ video {
   align-items: center;
   overflow: hidden;
 }
+.overlayimg::after{
+  position: absolute;
+  content: '';
+  /* top: 0; */
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 0;
+  box-shadow: 0 0 100px 100px rgba(0, 0, 0, .8);
+}
 .overlayimg img {
   width: 100%;
   object-fit: cover;
@@ -197,17 +207,17 @@ video {
   align-items: center;
   justify-content: center;
   padding: 30px 0;
-  background-color: rgba(0, 0, 0, 0.47);
-  box-shadow: 0 0 60px 50px rgba(0, 0, 0, 0.5);
+  /* background-color: rgba(0, 0, 0, 0.47);
+  box-shadow: 0 0 60px 50px rgba(0, 0, 0, 0.5); */
   z-index: 1;
 }
 .title__bar a {
   border-radius: 50px;
-  border: 1px white solid;
-  padding: 8px 10px 8px 8px;
+  border: 1px solid #eee;
+  padding: 8px 14px;
   font-size: 11px;
   font-style: italic;
-  color: white;
+  color: #f9f9f9;
   text-transform: uppercase;
   transition: 0.3s;
 }
@@ -282,17 +292,16 @@ video {
   padding: 12px 16px 12px 12px;
   font-size: 14px;
   border-radius: 50px;
-  border: 1px rgb(0, 0, 0) solid;
-  background-color: transparent;
+  /* border: 1px rgb(0, 0, 0) solid; */
+  border: unset;
+  background-color: #555;
+  color: #fff;
   text-transform: uppercase;
   font-style: italic;
-  color: rgb(0, 0, 0);
-  transition: 0.5s;
+  transition: 0.3s;
 }
 #button1:hover {
-  border: 1px rgb(190, 0, 0) solid;
   background-color: rgb(200, 0, 0);
-  color: rgb(255, 255, 255);
 }
 .cheer__colum__two {
   width: 60%;
@@ -390,13 +399,16 @@ video {
 }
 .input__bar input {
   border: none;
-  /* border: 1px black solid; */
-  box-shadow: 0 0 10px rgb(0, 0, 0, 0.2);
+  border: 1px solid #99999933;
+  /* box-shadow: 0 0 10px rgb(0, 0, 0, 0.1); */
   width: 100%;
   height: 30px;
   padding-left: 10px;
   outline: none;
   border-radius: 20px;
+}
+.input__bar input::placeholder {
+  color: #99999933;
 }
 .button__send {
   display: flex;
@@ -407,14 +419,16 @@ video {
   padding: 8px 16px;
   border-radius: 20px;
   border: none;
-  box-shadow: 0 0 10px rgb(0, 0, 0, 0.2);
+  border: 1px solid #99999933;
+  /* box-shadow: 0 0 10px rgb(0, 0, 0, 0.2); */
   background-color: white;
   font-size: 14px;
   color: rgb(0, 0, 0, 0.3);
+  cursor: pointer;
 }
 #button2:hover {
   color: rgb(0, 0, 0, 0.6);
-  box-shadow: 0 0 10px rgb(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.08);
 }
 #button2:active {
   background-color: whitesmoke;
@@ -527,12 +541,12 @@ video {
 }
 .image__item {
   cursor: pointer;
-  box-shadow: 0 0 10px rgb(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.08);
   transition: 0.3s;
 }
 .image__item:hover {
   cursor: pointer;
-  box-shadow: 0 0 20px rgb(0, 0, 0, 0.5);
+  box-shadow: 0 0 20px rgb(0, 0, 0, 0.2);
 }
 /* SLICK SLIDER */
 .information-bar {
@@ -623,7 +637,7 @@ video {
   }
   .title__bar a {
     font-size: 16px;
-    padding: 16px 20px;
+    /* padding: 16px 20px; */
   }
 }
 @media screen and (max-width: 1100px) {
@@ -791,6 +805,7 @@ video {
   width: 90%;
   margin: 0 auto;
   display: flex;
+  background-color: transparent;
 }
 .footer__colum1 {
   width: 60%;
@@ -803,7 +818,7 @@ video {
   padding: 10px;
   font-size: 26px;
   font-weight: 600;
-  color: black;
+  color: black !important;
 }
 .about__us,
 .service__customer__list,
@@ -886,13 +901,15 @@ video {
   padding: 10px;
   /* background-color: rgb(0, 0, 0, 0.3); */
   box-shadow: inset 0px 120px 60px -30px rgba(0, 0, 0, 0.5);
+  background-color: transparent;
 }
 .name__page {
-  position: absolute;
-  left: calc(18% + 20px);
+  /* position: absolute;
+  left: calc(18% + 20px); */
   z-index: 1;
 }
 .name__page a {
+  height: 27px;
   font-family: Raleway;
   font-size: 20px;
   font-weight: 600;
@@ -911,7 +928,7 @@ video {
   text-decoration: none;
 }
 .name__page h4 {
-  font-family: Epilogue;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 10px;
   font-weight: 400;
   color: rgb(255, 255, 255);
@@ -930,10 +947,12 @@ video {
   position: absolute;
   bottom: 10px;
   left: 10px;
+  margin: 0;
+  padding: 0;
 }
 .folow__page a,
 .share__page a {
-  font-family: Epilogue;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 10px;
   color: rgb(0, 0, 0);
   background-color: rgb(225, 225, 225);
@@ -941,6 +960,7 @@ video {
   border-radius: 2px;
   text-decoration: none;
   transition: 0.2s;
+  margin: 0;
 }
 .share__page {
   position: absolute;
@@ -1082,7 +1102,7 @@ video {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgb(255, 255, 255);
+    background-color: #f9f9f9;
     z-index: 1;
     margin-top: 68px;
     /* display: flex; */
@@ -1110,7 +1130,8 @@ video {
     margin: 50px 0;
     position: relative;
     border-radius: 15px;
-    box-shadow: 0 0 10px rgb(0, 0, 0, 0.2);
+    /* box-shadow: 0 0 10px rgb(0, 0, 0, 0.2); */
+    border: 1px solid #99999933;
     animation: fly_in .5s ease-in-out forwards;
 }
 .colum-img{
@@ -1143,7 +1164,7 @@ video {
 .colum-img img{
     width: 100%;
     border-radius: 10px;
-    box-shadow: 10px 10px 10px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 10px 10px 10px 1px rgba(0, 0, 0, 0.08);
 }
 .colum-information{
     width: 65%;
